--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
       <form name="myForm" class="form" onsubmit="validate();">
         <div class="form-group">
           <label for="number">Year of Birth:</label>
-          <input type="number" class="form-control" id="year" placeholder="Year of Birth Eg: 2019 if born in 2019" name="year">
+          <input type="number" min="1" class="form-control" id="year" minlength="4" maxlength="4"  id="pin" pattern="\d{4}" placeholder="Year of Birth Example 2021" name="year">
         </div>
         <div class="form-group">
           <label for="month">Month of Birth:</label>
-          <input type="number" class="form-control" id="month" placeholder="Month of Birth" name="month">
+          <input type="number" min="1" max="12" class="form-control" id="month" placeholder="Month of Birth Example 5 for May" name="month">
         </div>
         <div class="form-group">
           <label for="date">Date of Birth:</label>
-          <input type="number" class="form-control" id="date" placeholder="Date of Birth eg 05 for May" name="date">
+          <input type="number" min="1" max="31" class="form-control" id="date" placeholder="Date of Birth" name="date">
         </div>
         <div class="form-group" id="buttonid">
           <label for="month">Gender</label><br>
           <div class="form-check-inline">
             <label class="form-check-label">
-              <input type="radio" class="form-check-input button1" name="gender" id="male">&nbsp; Male 
+              <input type="radio" class="form-check-input button1" name="gender" id="male" checked >&nbsp; Male 
             </label>
           </div>
           <div class="form-check-inline">
