--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
       <form name="myForm" class="form">
         <div class="form-group">
           <label for="number">Year of Birth:</label>
-          <input type="number" min="1" class="form-control" id="year" id="pin" placeholder="Year of Birth Example 2021" name="year">
+          <input type="number" min="1" class="form-control" id="year" id="pin" placeholder="Year of Birth Example 2021" name="year" required>
         </div>
         <div class="form-group">
           <label for="month">Month of Birth:</label>
-          <input type="number" min="1" max="12" class="form-control" id="month" placeholder="Month of Birth Example 05 for May" name="month">
+          <input type="number" min="1" max="12" class="form-control" id="month" placeholder="Month of Birth Example 05 for May" name="month" required>
         </div>
         <div class="form-group">
           <label for="day">Day of Birth:</label>
-          <input type="number" min="1" max="31" class="form-control" id="day" placeholder="Day of Birth" name="day">
+          <input type="number" min="1" max="31" class="form-control" id="day" placeholder="Day of Birth" name="day" required>
         </div>
         <div class="form-group" id="buttonid">
-          <label for="month">Gender</label><br>
+          <label for="month">Gender</label>
           <div class="form-check-inline">
             <label class="form-check-label">
               <input type="radio" class="form-check-input button1" name="gender" id="male" checked >&nbsp; Male 
