Correct the Ghanain

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="title">
       <h1>Welcome to the Akan Name Generator</h1>
       
-      <h2>Would you like to know what your name would have been if you were a Ghanian?</h2>
+      <h2>Would you like to know what your name would have been if you were a Ghanain?</h2>
     
     </div>
      <div class="card-deck">
